# paperflow

./: .gitignore  README.md  design.md  gnaroshi.app.json  pyproject.toml
PaperFlowApp/: AppState.swift  AppTheme.swift  CleanupWorkbenchView.swift  CommandPaletteView.swift  CommandPopupWindow.swift  CommandRunner.swift  DashboardView.swift  DropShelfPanel.swift  DropShelfView.swift  ExistingAttachmentsView.swift  FloatingDropShelfController.swift  GlobalHotkeyManager.swift  HotZoneWindow.swift  Info.plist  KeychainStore.swift  LocalFolderImportView.swift  LocalVaultView.swift  MainWindowView.swift  MenuBarController.swift  Models.swift  MultiMonitorManager.swift  Package.swift  PaperFlowApp.swift  PermissionManager.swift  README.md  ReportParser.swift  ReportsView.swift  ScreenPlacementPolicy.swift  SettingsView.swift  ShowcaseMode.swift  ShowcaseView.swift  UI_UX_CHECKLIST.md  UserGuideView.swift  ZoteroOrganizeView.swift  build_app.sh  distribution_check.sh  install_app.sh
config/: taxonomy_v3.yaml  user_taxonomy_overrides.yaml
data/: golden_classifications.yaml
paperflow/: __init__.py  attachment_localize.py  backup.py  classifier.py  classifier_v2.py  cleanup.py  cleanup_workbench.py  cli.py  credentials.py  dedupe.py  gemini_classifier.py  ingest.py  integration.py  local_import.py  metadata.py  migration.py  migration_apply.py  migration_models.py  models.py  pdf_text.py  planner.py  reading_activity.py  reporter.py  rollback.py  taxonomy.py  taxonomy_overrides.py  taxonomy_v2.py  taxonomy_v3.py  utils.py  vault.py  zotero_local.py  zotero_web.py
(+33 files in other folders)
